# buildkit-client

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.test  README.md  build.rs  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  test.yml
docs/: GRPC_TUNNEL_ARCHITECTURE.md  PROTO_SETUP.md  QUICK_START.md  TESTING.md
scripts/: test.sh
src/: builder.rs  lib.rs  solve.rs
src/session/: filesync.rs  grpc_tunnel.rs  mod.rs
tests/: integration_test.rs
tests/common/: mod.rs
