[package]
name = "buildkit-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and async runtime
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
prost = "0.13"
prost-types = "0.13"
bytes = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and logging
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-stream = "0.3"
rand = "0.8"

# HTTP/2 and gRPC frame parsing
h2 = "0.4"
http = "1.0"

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.0"

[build-dependencies]
# For potential custom proto compilation if needed
tonic-build = "0.12"

[[bench]]
name = "build_bench"
harness = false
